@@ -134,8 +134,12 @@ sub restartService
 
 	$log->info("Restarting service for module: " . $self->name);
 	try {
-		$self->_regenConfig('restart' => 1);
-	} finally {
+            $self->_regenConfig('restart' => 1);
+	} otherwise  {
+            my ($ex) = @_;
+            $log->error("Error restarting service: $ex");
+            throw $ex;
+        } finally {
 		$self->_unlock();
 	};
 }
